--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,5 +1,6 @@
 @import "../bower_components/foundation/scss/normalize";
 @import "../bower_components/font-awesome/scss/font-awesome";
+@import "../bower_components/animate.css/animate";
 @import "settings";
 @import "foundation";
 
