--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -116,7 +116,7 @@ $jet         : #222222;
 $black       : #000000;
 
 // We use these as default colors throughout
-$primary-color: #00c5a8;
+$primary-color: #00c29b;
 // $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
