--- a/scss/app.scss
+++ b/scss/app.scss
@@ -42,6 +42,8 @@
 //   "foundation/components/offcanvas",
 //   "foundation/components/visibility";
 
+html, body { -webkit-font-smoothing: antialiased; }
+
 main {
 	aside.columns,
 	article.columns {
@@ -292,6 +294,7 @@ main {
 			width: 100px;
 			border-radius: 1000px;
 			border: 2px solid $primary-color;
+			background-color: $primary-color;
 			
 			@media #{$small-only} {
 				width: 150px;
