Add term to sidebar

--- a/app/templates/policy.html
+++ b/app/templates/policy.html
@@ -10,6 +10,10 @@
 				<h6>For <strong>{{ policy.address }}</strong></h6>
 		  </section>
 		  <section class="sidebar-item">
+				<h6>Policy Term:</h6>
+				<h5>{{ policy.term }}</h5>
+		  </section>
+		  <section class="sidebar-item">
 				<h6>Name Of Insured:</h6>
 				<h5>{{ policy.insured_name }}</h5>
 		  </section>
@@ -20,10 +24,6 @@
 		  <section class="sidebar-item">
 				<h6>Annual Premium:</h6>
 				<h5>{{ policy.premium }}</h5>
-		  </section>
-		  <section class="sidebar-item">
-				<h6>Payment Due:</h6>
-				<h5>{{ policy.payment_due }}</h5>
 		  </section>
 		  <section class="sidebar-item list">
 				<p><a href="">Make Changes To My Policy<i class="material-icons">chevron_right</i></a></p>
