--- a/app/templates/claim.html
+++ b/app/templates/claim.html
@@ -1,6 +1,6 @@
 <section class="claim">
 	<div class="row">
-		<div class="small-12 large-6 large-centered columns">
+		<div class="large-6 small-12 large-centered columns">
 			<div class="form-panel">
 				<i class="entypo-flag panel-icon"></i>
 				<h3>Report A Loss: <small>Step <span class="claim-step">{{ claimStep }}</span> of 3</small></h3>
