--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,22 +1,24 @@
-<div class="row">
-	<div class="large-5 medium-8 small-12 medium-centered columns">
-		<div class="panel radius login-form">
-			<div data-alert class="alert-box warning radius" ng-if="authenticationError">
-				<div class="text-center">
-					<div>The username or password you entered was incorrect...</div>
+<section class="login-form">
+	<div class="row">
+		<div class="large-5 medium-8 small-12 medium-centered columns">
+			<div class="form-panel">
+				<div data-alert class="alert-box warning radius" ng-if="authenticationError">
+					<div class="text-center">
+						<div>The username or password you entered was incorrect...</div>
+					</div>
 				</div>
+				<form>
+					<label>Email</label>
+					<input type="email" name="email" ng-model="auth.email" required>
+					<label>Password</label>
+					<input type="password" name="password" ng-model="auth.password" required>
+					<button type="submit" class="button expand" ng-click="authenticate(auth)">Login</button>
+					<hr>
+					<div class="clearfix">
+						<a href="" class="right"><small>Forgot Your Password?</small></a>
+					</div>
+				</form>		
 			</div>
-			<form>
-				<label>Email</label>
-				<input type="email" name="email" ng-model="auth.email" required>
-				<label>Password</label>
-				<input type="password" name="password" ng-model="auth.password" required>
-				<button type="submit" class="button expand" ng-click="authenticate(auth)">Login</button>
-				<hr>
-				<div class="clearfix">
-					<a href="" class="right"><small>Forgot Your Password?</small></a>
-				</div>
-			</form>		
 		</div>
 	</div>
-</div>
+</section>
